# firmware-probe

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  STM32L031K6Tx_FLASH.ld  openocd.cfg  sensor_unit.ioc  stm32l0-arm-toolchain.cmake
Core/Inc/: main.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
Core/Src/: adc.c  crc.c  gpio.c  lptim.c  main.c  rtc.c  spi.c  stm32l0xx_it.c  tim.c
Firmware/Inc/: SX1278.h  SX1278_hw.h  app_main.h  soft_timer.h
Firmware/Src/: SX1278.c  SX1278_hw.c  app_main.c  soft_timer.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
